# src/models/Part.ts
@@ -1,0 +1,6 @@
+export class Part {
+    UploadId?: string = "";
+    PartNumber: number = 0;
+    PresignedUrl: string = "";
+    ETag?: string = "";
+  }
