# src/models/UploadList.ts
@@ -1,0 +1,4 @@
+import { Upload } from './Upload';
+
+type UploadList = Upload[];
+export default UploadList;
