# src/models/User.ts
@@ -1,0 +1,5 @@
+export class User {
+    UserId: string = "";
+    PodcastId?: string = "";
+    EpisodeId?: string = "";
+  }
