# swagger/oas30.json
@@ -1,20 +1,31 @@
 {
   "openapi" : "3.0.1",
   "info" : {
-    "title" : "FileMng",
-    "version" : "2024-02-01T12:28:44Z"
+    "title" : "AnyPodcast-FileMng_templ",
+    "version" : "2024-02-05T18:47:27Z"
   },
   "servers" : [ {
-    "url" : "https://9q4yvdedcj.execute-api.il-central-1.amazonaws.com/{basePath}",
+    "url" : "https://o9qfvgrga3.execute-api.il-central-1.amazonaws.com/{basePath}",
     "variables" : {
       "basePath" : {
-        "default" : "stg"
+        "default" : "templ"
       }
     }
   } ],
   "paths" : {
-    "/init" : {
-      "get" : {
+    "/upload/init" : {
+      "post" : {
+        "operationId" : "init",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Upload"
+              }
+            }
+          },
+          "required" : true
+        },
         "responses" : {
           "200" : {
             "description" : "200 response",
@@ -28,16 +39,16 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "aws_proxy",
           "httpMethod" : "POST",
-          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:fileMng-init/invocations",
+          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:Lambda-Mock/invocations",
           "responses" : {
             "default" : {
               "statusCode" : "200"
             }
           },
           "passthroughBehavior" : "when_no_match",
-          "contentHandling" : "CONVERT_TO_TEXT"
+          "contentHandling" : "CONVERT_TO_TEXT",
+          "type" : "aws_proxy"
         }
       },
       "options" : {
@@ -71,7 +82,6 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "mock",
           "responses" : {
             "default" : {
               "statusCode" : "200",
@@ -85,12 +95,24 @@
           "requestTemplates" : {
             "application/json" : "{\"statusCode\": 200}"
           },
-          "passthroughBehavior" : "when_no_match"
+          "passthroughBehavior" : "when_no_match",
+          "type" : "mock"
         }
       }
     },
     "/upload" : {
-      "post" : {
+      "get" : {
+        "operationId" : "get_list",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/UploadList"
+              }
+            }
+          },
+          "required" : true
+        },
         "responses" : {
           "200" : {
             "description" : "200 response",
@@ -104,16 +126,16 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "aws_proxy",
           "httpMethod" : "POST",
-          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:fileMng/invocations",
+          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:Lambda-Mock/invocations",
           "responses" : {
             "default" : {
               "statusCode" : "200"
             }
           },
           "passthroughBehavior" : "when_no_match",
-          "contentHandling" : "CONVERT_TO_TEXT"
+          "contentHandling" : "CONVERT_TO_TEXT",
+          "type" : "aws_proxy"
         }
       },
       "options" : {
@@ -147,7 +169,6 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "mock",
           "responses" : {
             "default" : {
               "statusCode" : "200",
@@ -161,12 +182,24 @@
           "requestTemplates" : {
             "application/json" : "{\"statusCode\": 200}"
           },
-          "passthroughBehavior" : "when_no_match"
+          "passthroughBehavior" : "when_no_match",
+          "type" : "mock"
         }
       }
     },
-    "/complete" : {
+    "/upload/complete" : {
       "post" : {
+        "operationId" : "complete",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Upload"
+              }
+            }
+          },
+          "required" : true
+        },
         "responses" : {
           "200" : {
             "description" : "200 response",
@@ -180,16 +213,16 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "aws_proxy",
           "httpMethod" : "POST",
-          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:fileMng-complete/invocations",
+          "uri" : "arn:aws:apigateway:il-central-1:lambda:path/2015-03-31/functions/arn:aws:lambda:il-central-1:089286297150:function:Lambda-Mock/invocations",
           "responses" : {
             "default" : {
               "statusCode" : "200"
             }
           },
           "passthroughBehavior" : "when_no_match",
-          "contentHandling" : "CONVERT_TO_TEXT"
+          "contentHandling" : "CONVERT_TO_TEXT",
+          "type" : "aws_proxy"
         }
       },
       "options" : {
@@ -223,7 +256,6 @@
           }
         },
         "x-amazon-apigateway-integration" : {
-          "type" : "mock",
           "responses" : {
             "default" : {
               "statusCode" : "200",
@@ -237,7 +269,8 @@
           "requestTemplates" : {
             "application/json" : "{\"statusCode\": 200}"
           },
-          "passthroughBehavior" : "when_no_match"
+          "passthroughBehavior" : "when_no_match",
+          "type" : "mock"
         }
       }
     }
@@ -247,8 +280,67 @@
       "Empty" : {
         "title" : "Empty Schema",
         "type" : "object"
+      },
+      "User" : {
+        "title" : "User",
+        "required" : [ "UserId" ],
+        "type" : "object",
+        "properties" : {
+          "UserId" : {
+            "type" : "string",
+            "default" : ""
+          },
+          "PodcastId" : {
+            "type" : "string",
+            "default" : ""
+          },
+          "EpisodeId" : {
+            "type" : "string",
+            "default" : ""
+          }
+        }
+      },
+      "Upload" : {
+        "title" : "Upload",
+        "required" : [ "FileName", "User" ],
+        "type" : "object",
+        "properties" : {
+          "Created" : {
+            "type" : "string",
+            "default" : ""
+          },
+          "User" : {
+            "$ref" : "#/components/schemas/User"
+          },
+          "FileName" : {
+            "type" : "string",
+            "default" : ""
+          },
+          "UploadId" : {
+            "type" : "string",
+            "default" : ""
+          },
+          "Parts" : {
+            "type" : "number",
+            "default" : 0
+          },
+          "Size" : {
+            "type" : "number",
+            "default" : 0
+          },
+          "IsCompleted" : {
+            "type" : "boolean",
+            "default" : false
+          }
+        }
+      },
+      "UploadList" : {
+        "title" : "UploadList",
+        "type" : "array",
+        "items" : {
+          "$ref" : "#/components/schemas/Upload"
+        }
       }
     }
-  },
-  "x-amazon-apigateway-binary-media-types" : [ "multipart/form-data" ]
+  }
 }
